iptables/rules.v4
# Generated by iptables-save v1.6.1 on Sat Feb  9 14:24:11 2019
*mangle
:PREROUTING ACCEPT [589712:369369262]
:INPUT ACCEPT [589712:369369262]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [441094:401218777]
:POSTROUTING ACCEPT [441094:401218777]
COMMIT
# Completed on Sat Feb  9 14:24:11 2019
# Generated by iptables-save v1.6.1 on Sat Feb  9 14:24:11 2019
*nat
:PREROUTING ACCEPT [199517:10339893]
:INPUT ACCEPT [49376:2080629]
:OUTPUT ACCEPT [7614:469063]
:POSTROUTING ACCEPT [7614:469063]
COMMIT
# Completed on Sat Feb  9 14:24:11 2019
# Generated by iptables-save v1.6.1 on Sat Feb  9 14:24:11 2019
*filter
:INPUT DROP [237:13084]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [492:77928]
:f2b-nginx-ban - [0:0]
:f2b-nginx-limits - [0:0]
:f2b-ssh - [0:0]
:f2b-sshd - [0:0]
:fail2ban-dropbear - [0:0]
:fail2ban-nginx-ban - [0:0]
:fail2ban-nginx-http-auth - [0:0]
:fail2ban-nginx-limits - [0:0]
:fail2ban-nginx-raw - [0:0]
:fail2ban-pam-generic - [0:0]
:fail2ban-pure-ftpd - [0:0]
:fail2ban-ssh - [0:0]
:fail2ban-ssh-ddos - [0:0]
-A INPUT -s 108.178.0.0/19 -j DROP
-A INPUT -s 52.52.0.0/15 -j DROP
-A INPUT -s 178.128.224.0/20 -j DROP
-A INPUT -s 192.155.83.0/24 -j DROP
-A INPUT -s 213.219.36.0/22 -j DROP
-A INPUT -s 213.219.2.0/24 -j DROP
-A INPUT -s 213.168.248.0/22 -j DROP
-A INPUT -s 213.52.130.0/24 -j DROP
-A INPUT -s 213.52.128.0/23 -j DROP
-A INPUT -s 212.111.40.0/22 -j DROP
-A INPUT -s 212.71.248.0/21 -j DROP
-A INPUT -s 212.71.244.0/22 -j DROP
-A INPUT -s 212.71.232.0/21 -j DROP
-A INPUT -s 209.123.234.0/24 -j DROP
-A INPUT -s 209.123.162.0/24 -j DROP
-A INPUT -s 207.192.72.0/22 -j DROP
-A INPUT -s 207.192.68.0/22 -j DROP
-A INPUT -s 198.74.56.0/21 -j DROP
-A INPUT -s 198.74.52.0/22 -j DROP
-A INPUT -s 198.74.51.0/24 -j DROP
-A INPUT -s 198.74.50.0/24 -j DROP
-A INPUT -s 198.74.49.0/24 -j DROP
-A INPUT -s 198.74.48.0/24 -j DROP
-A INPUT -s 198.74.48.0/22 -j DROP
-A INPUT -s 198.58.96.0/19 -j DROP
-A INPUT -s 192.155.92.0/22 -j DROP
-A INPUT -s 192.155.88.0/22 -j DROP
-A INPUT -s 192.155.87.0/24 -j DROP
-A INPUT -s 192.155.86.0/24 -j DROP
-A INPUT -s 192.155.85.0/24 -j DROP
-A INPUT -s 192.155.84.0/24 -j DROP
-A INPUT -s 192.155.83.0/24 -j DROP
-A INPUT -s 192.155.82.0/24 -j DROP
-A INPUT -s 192.155.81.0/24 -j DROP
-A INPUT -s 192.155.80.0/24 -j DROP
-A INPUT -s 192.155.80.0/21 -j DROP
-A INPUT -s 192.81.135.0/24 -j DROP
-A INPUT -s 192.81.134.0/24 -j DROP
-A INPUT -s 192.81.133.0/24 -j DROP
-A INPUT -s 192.81.132.0/24 -j DROP
-A INPUT -s 192.81.132.0/22 -j DROP
-A INPUT -s 192.81.131.0/24 -j DROP
-A INPUT -s 192.81.130.0/24 -j DROP
-A INPUT -s 192.81.129.0/24 -j DROP
-A INPUT -s 192.81.128.0/24 -j DROP
-A INPUT -s 192.81.128.0/22 -j DROP
-A INPUT -s 185.3.92.0/22 -j DROP
-A INPUT -s 178.79.128.0/18 -j DROP
-A INPUT -s 176.58.96.0/19 -j DROP
-A INPUT -s 173.255.255.0/24 -j DROP
-A INPUT -s 173.255.254.0/24 -j DROP
-A INPUT -s 173.255.253.0/24 -j DROP
-A INPUT -s 173.255.252.0/24 -j DROP
-A INPUT -s 173.255.251.0/24 -j DROP
-A INPUT -s 173.255.250.0/24 -j DROP
-A INPUT -s 173.255.249.0/24 -j DROP
-A INPUT -s 173.255.248.0/24 -j DROP
-A INPUT -s 173.255.247.0/24 -j DROP
-A INPUT -s 173.255.246.0/24 -j DROP
-A INPUT -s 173.255.245.0/24 -j DROP
-A INPUT -s 173.255.244.0/24 -j DROP
-A INPUT -s 173.255.243.0/24 -j DROP
-A INPUT -s 173.255.242.0/24 -j DROP
-A INPUT -s 173.255.241.0/24 -j DROP
-A INPUT -s 173.255.240.0/24 -j DROP
-A INPUT -s 173.255.240.0/20 -j DROP
-A INPUT -s 173.255.239.0/24 -j DROP
-A INPUT -s 173.255.224.0/20 -j DROP
-A INPUT -s 173.255.223.0/24 -j DROP
-A INPUT -s 173.255.222.0/24 -j DROP
-A INPUT -s 173.255.221.0/24 -j DROP
-A INPUT -s 173.255.220.0/24 -j DROP
-A INPUT -s 173.255.219.0/24 -j DROP
-A INPUT -s 173.255.218.0/24 -j DROP
-A INPUT -s 173.255.217.0/24 -j DROP
-A INPUT -s 173.255.216.0/24 -j DROP
-A INPUT -s 173.255.215.0/24 -j DROP
-A INPUT -s 173.255.214.0/24 -j DROP
-A INPUT -s 173.255.213.0/24 -j DROP
-A INPUT -s 173.255.212.0/24 -j DROP
-A INPUT -s 173.255.211.0/24 -j DROP
-A INPUT -s 173.255.210.0/24 -j DROP
-A INPUT -s 173.255.209.0/24 -j DROP
-A INPUT -s 173.255.208.0/24 -j DROP
-A INPUT -s 173.255.208.0/20 -j DROP
-A INPUT -s 173.255.192.0/20 -j DROP
-A INPUT -s 173.230.158.0/24 -j DROP
-A INPUT -s 173.230.157.0/24 -j DROP
-A INPUT -s 173.230.156.0/24 -j DROP
-A INPUT -s 173.230.155.0/24 -j DROP
-A INPUT -s 173.230.154.0/24 -j DROP
-A INPUT -s 173.230.153.0/24 -j DROP
-A INPUT -s 173.230.152.0/24 -j DROP
-A INPUT -s 173.230.151.0/24 -j DROP
-A INPUT -s 173.230.150.0/24 -j DROP
-A INPUT -s 173.230.149.0/24 -j DROP
-A INPUT -s 173.230.148.0/24 -j DROP
-A INPUT -s 173.230.147.0/24 -j DROP
-A INPUT -s 173.230.146.0/24 -j DROP
-A INPUT -s 173.230.145.0/24 -j DROP
-A INPUT -s 173.230.144.0/24 -j DROP
-A INPUT -s 173.230.144.0/20 -j DROP
-A INPUT -s 173.230.128.0/20 -j DROP
-A INPUT -s 172.105.224.0/19 -j DROP
-A INPUT -s 172.105.192.0/19 -j DROP
-A INPUT -s 172.105.144.0/23 -j DROP
-A INPUT -s 172.105.134.0/23 -j DROP
-A INPUT -s 172.105.0.0/19 -j DROP
-A INPUT -s 172.104.224.0/19 -j DROP
-A INPUT -s 172.104.220.0/24 -j DROP
-A INPUT -s 172.104.208.0/20 -j DROP
-A INPUT -s 172.104.200.0/21 -j DROP
-A INPUT -s 172.104.160.0/19 -j DROP
-A INPUT -s 172.104.128.0/19 -j DROP
-A INPUT -s 172.104.96.0/19 -j DROP
-A INPUT -s 172.104.64.0/19 -j DROP
-A INPUT -s 172.104.32.0/19 -j DROP
-A INPUT -s 172.104.16.0/20 -j DROP
-A INPUT -s 172.104.8.0/21 -j DROP
-A INPUT -s 172.104.4.0/22 -j DROP
-A INPUT -s 162.216.16.0/22 -j DROP
-A INPUT -s 151.236.216.0/21 -j DROP
-A INPUT -s 139.162.224.0/19 -j DROP
-A INPUT -s 139.162.192.0/19 -j DROP
-A INPUT -s 139.162.160.0/19 -j DROP
-A INPUT -s 139.162.128.0/19 -j DROP
-A INPUT -s 139.162.96.0/19 -j DROP
-A INPUT -s 139.162.64.0/19 -j DROP
-A INPUT -s 139.162.32.0/19 -j DROP
-A INPUT -s 139.162.0.0/19 -j DROP
-A INPUT -s 109.237.24.0/22 -j DROP
-A INPUT -s 109.74.192.0/20 -j DROP
-A INPUT -s 104.237.159.0/24 -j DROP
-A INPUT -s 104.237.158.0/24 -j DROP
-A INPUT -s 104.237.157.0/24 -j DROP
-A INPUT -s 104.237.156.0/24 -j DROP
-A INPUT -s 104.237.155.0/24 -j DROP
-A INPUT -s 104.237.154.0/24 -j DROP
-A INPUT -s 104.237.153.0/24 -j DROP
-A INPUT -s 104.237.152.0/24 -j DROP
-A INPUT -s 104.237.152.0/21 -j DROP
-A INPUT -s 104.237.144.0/21 -j DROP
-A INPUT -s 104.237.136.0/21 -j DROP
-A INPUT -s 104.237.128.0/21 -j DROP
-A INPUT -s 104.200.28.0/22 -j DROP
-A INPUT -s 104.200.27.0/24 -j DROP
-A INPUT -s 104.200.26.0/24 -j DROP
-A INPUT -s 104.200.25.0/24 -j DROP
-A INPUT -s 104.200.24.0/24 -j DROP
-A INPUT -s 104.200.24.0/22 -j DROP
-A INPUT -s 104.200.16.0/21 -j DROP
-A INPUT -s 103.29.68.0/22 -j DROP
-A INPUT -s 103.3.60.0/22 -j DROP
-A INPUT -s 97.107.128.0/20 -j DROP
-A INPUT -s 96.126.112.0/20 -j DROP
-A INPUT -s 96.126.104.0/21 -j DROP
-A INPUT -s 96.126.103.0/24 -j DROP
-A INPUT -s 96.126.102.0/24 -j DROP
-A INPUT -s 96.126.101.0/24 -j DROP
-A INPUT -s 96.126.100.0/24 -j DROP
-A INPUT -s 96.126.99.0/24 -j DROP
-A INPUT -s 96.126.98.0/24 -j DROP
-A INPUT -s 96.126.97.0/24 -j DROP
-A INPUT -s 96.126.96.0/24 -j DROP
-A INPUT -s 96.126.96.0/21 -j DROP
-A INPUT -s 88.80.184.0/21 -j DROP
-A INPUT -s 85.159.208.0/21 -j DROP
-A INPUT -s 85.90.244.0/22 -j DROP
-A INPUT -s 80.85.84.0/22 -j DROP
-A INPUT -s 75.127.96.0/23 -j DROP
-A INPUT -s 75.127.72.0/24 -j DROP
-A INPUT -s 74.207.255.0/24 -j DROP
-A INPUT -s 74.207.254.0/24 -j DROP
-A INPUT -s 74.207.253.0/24 -j DROP
-A INPUT -s 74.207.252.0/24 -j DROP
-A INPUT -s 74.207.251.0/24 -j DROP
-A INPUT -s 74.207.250.0/24 -j DROP
-A INPUT -s 74.207.249.0/24 -j DROP
-A INPUT -s 74.207.248.0/24 -j DROP
-A INPUT -s 74.207.247.0/24 -j DROP
-A INPUT -s 74.207.246.0/24 -j DROP
-A INPUT -s 74.207.245.0/24 -j DROP
-A INPUT -s 74.207.244.0/24 -j DROP
-A INPUT -s 74.207.243.0/24 -j DROP
-A INPUT -s 74.207.242.0/24 -j DROP
-A INPUT -s 74.207.241.0/24 -j DROP
-A INPUT -s 74.207.240.0/24 -j DROP
-A INPUT -s 74.207.240.0/20 -j DROP
-A INPUT -s 74.207.239.0/24 -j DROP
-A INPUT -s 74.207.224.0/20 -j DROP
-A INPUT -s 74.82.5.0/24 -j DROP
-A INPUT -s 74.82.3.0/24 -j DROP
-A INPUT -s 74.82.2.0/24 -j DROP
-A INPUT -s 74.82.2.0/23 -j DROP
-A INPUT -s 72.14.176.0/20 -j DROP
-A INPUT -s 70.87.222.0/24 -j DROP
-A INPUT -s 70.85.129.0/24 -j DROP
-A INPUT -s 70.85.31.0/24 -j DROP
-A INPUT -s 70.85.16.0/24 -j DROP
-A INPUT -s 70.47.152.0/21 -j DROP
-A INPUT -s 69.164.208.0/20 -j DROP
-A INPUT -s 69.164.192.0/20 -j DROP
-A INPUT -s 69.93.127.0/24 -j DROP
-A INPUT -s 69.56.251.0/24 -j DROP
-A INPUT -s 69.56.173.0/24 -j DROP
-A INPUT -s 67.18.208.0/24 -j DROP
-A INPUT -s 67.18.187.0/24 -j DROP
-A INPUT -s 67.18.186.0/24 -j DROP
-A INPUT -s 67.18.176.0/24 -j DROP
-A INPUT -s 67.18.92.0/24 -j DROP
-A INPUT -s 67.18.89.0/24 -j DROP
-A INPUT -s 66.246.138.0/24 -j DROP
-A INPUT -s 66.246.76.0/24 -j DROP
-A INPUT -s 66.246.75.0/24 -j DROP
-A INPUT -s 66.228.56.0/21 -j DROP
-A INPUT -s 66.228.48.0/21 -j DROP
-A INPUT -s 66.228.32.0/20 -j DROP
-A INPUT -s 66.220.1.0/24 -j DROP
-A INPUT -s 66.175.223.0/24 -j DROP
-A INPUT -s 66.175.222.0/24 -j DROP
-A INPUT -s 66.175.221.0/24 -j DROP
-A INPUT -s 66.175.220.0/24 -j DROP
-A INPUT -s 66.175.219.0/24 -j DROP
-A INPUT -s 66.175.218.0/24 -j DROP
-A INPUT -s 66.175.217.0/24 -j DROP
-A INPUT -s 66.175.216.0/24 -j DROP
-A INPUT -s 66.175.216.0/21 -j DROP
-A INPUT -s 66.175.208.0/21 -j DROP
-A INPUT -s 66.160.141.0/24 -j DROP
-A INPUT -s 66.29.91.0/24 -j DROP
-A INPUT -s 65.49.60.0/24 -j DROP
-A INPUT -s 65.19.178.0/24 -j DROP
-A INPUT -s 64.71.152.0/24 -j DROP
-A INPUT -s 64.62.231.0/24 -j DROP
-A INPUT -s 64.62.228.0/24 -j DROP
-A INPUT -s 64.62.190.0/24 -j DROP
-A INPUT -s 64.22.124.0/23 -j DROP
-A INPUT -s 64.22.109.0/24 -j DROP
-A INPUT -s 64.22.103.0/24 -j DROP
-A INPUT -s 64.22.84.0/24 -j DROP
-A INPUT -s 64.22.71.0/24 -j DROP
-A INPUT -s 64.5.53.0/24 -j DROP
-A INPUT -s 50.116.48.0/20 -j DROP
-A INPUT -s 50.116.32.0/20 -j DROP
-A INPUT -s 50.116.16.0/20 -j DROP
-A INPUT -s 50.116.15.0/24 -j DROP
-A INPUT -s 50.116.14.0/24 -j DROP
-A INPUT -s 50.116.13.0/24 -j DROP
-A INPUT -s 50.116.12.0/24 -j DROP
-A INPUT -s 50.116.11.0/24 -j DROP
-A INPUT -s 50.116.10.0/24 -j DROP
-A INPUT -s 50.116.9.0/24 -j DROP
-A INPUT -s 50.116.8.0/24 -j DROP
-A INPUT -s 50.116.7.0/24 -j DROP
-A INPUT -s 50.116.6.0/24 -j DROP
-A INPUT -s 50.116.5.0/24 -j DROP
-A INPUT -s 50.116.4.0/24 -j DROP
-A INPUT -s 50.116.3.0/24 -j DROP
-A INPUT -s 50.116.2.0/24 -j DROP
-A INPUT -s 50.116.1.0/24 -j DROP
-A INPUT -s 50.116.0.0/24 -j DROP
-A INPUT -s 50.116.0.0/20 -j DROP
-A INPUT -s 45.118.132.0/22 -j DROP
-A INPUT -s 45.79.224.0/19 -j DROP
-A INPUT -s 45.79.208.0/20 -j DROP
-A INPUT -s 45.79.192.0/20 -j DROP
-A INPUT -s 45.79.176.0/20 -j DROP
-A INPUT -s 45.79.160.0/20 -j DROP
-A INPUT -s 45.79.128.0/19 -j DROP
-A INPUT -s 45.79.112.0/20 -j DROP
-A INPUT -s 45.79.96.0/20 -j DROP
-A INPUT -s 45.79.64.0/19 -j DROP
-A INPUT -s 45.79.64.0/18 -j DROP
-A INPUT -s 45.79.16.0/20 -j DROP
-A INPUT -s 45.79.14.0/24 -j DROP
-A INPUT -s 45.79.13.0/24 -j DROP
-A INPUT -s 45.79.12.0/24 -j DROP
-A INPUT -s 45.79.8.0/22 -j DROP
-A INPUT -s 45.79.0.0/21 -j DROP
-A INPUT -s 45.56.120.0/21 -j DROP
-A INPUT -s 45.56.112.0/21 -j DROP
-A INPUT -s 45.56.96.0/20 -j DROP
-A INPUT -s 45.56.95.0/24 -j DROP
-A INPUT -s 45.56.94.0/24 -j DROP
-A INPUT -s 45.56.93.0/24 -j DROP
-A INPUT -s 45.56.92.0/24 -j DROP
-A INPUT -s 45.56.91.0/24 -j DROP
-A INPUT -s 45.56.90.0/24 -j DROP
-A INPUT -s 45.56.89.0/24 -j DROP
-A INPUT -s 45.56.88.0/24 -j DROP
-A INPUT -s 45.56.87.0/24 -j DROP
-A INPUT -s 45.56.86.0/24 -j DROP
-A INPUT -s 45.56.85.0/24 -j DROP
-A INPUT -s 45.56.84.0/24 -j DROP
-A INPUT -s 45.56.83.0/24 -j DROP
-A INPUT -s 45.56.82.0/24 -j DROP
-A INPUT -s 45.56.81.0/24 -j DROP
-A INPUT -s 45.56.80.0/24 -j DROP
-A INPUT -s 45.56.80.0/20 -j DROP
-A INPUT -s 45.56.64.0/20 -j DROP
-A INPUT -s 45.33.112.0/20 -j DROP
-A INPUT -s 45.33.111.0/24 -j DROP
-A INPUT -s 45.33.110.0/24 -j DROP
-A INPUT -s 45.33.109.0/24 -j DROP
-A INPUT -s 45.33.108.0/24 -j DROP
-A INPUT -s 45.33.107.0/24 -j DROP
-A INPUT -s 45.33.106.0/24 -j DROP
-A INPUT -s 45.33.105.0/24 -j DROP
-A INPUT -s 45.33.104.0/24 -j DROP
-A INPUT -s 45.33.104.0/21 -j DROP
-A INPUT -s 45.33.96.0/21 -j DROP
-A INPUT -s 45.33.64.0/19 -j DROP
-A INPUT -s 45.33.63.0/24 -j DROP
-A INPUT -s 45.33.62.0/24 -j DROP
-A INPUT -s 45.33.61.0/24 -j DROP
-A INPUT -s 45.33.60.0/24 -j DROP
-A INPUT -s 45.33.59.0/24 -j DROP
-A INPUT -s 45.33.58.0/24 -j DROP
-A INPUT -s 45.33.57.0/24 -j DROP
-A INPUT -s 45.33.56.0/24 -j DROP
-A INPUT -s 45.33.55.0/24 -j DROP
-A INPUT -s 45.33.54.0/24 -j DROP
-A INPUT -s 45.33.53.0/24 -j DROP
-A INPUT -s 45.33.52.0/24 -j DROP
-A INPUT -s 45.33.51.0/24 -j DROP
-A INPUT -s 45.33.50.0/24 -j DROP
-A INPUT -s 45.33.49.0/24 -j DROP
-A INPUT -s 45.33.48.0/24 -j DROP
-A INPUT -s 45.33.47.0/24 -j DROP
-A INPUT -s 45.33.46.0/24 -j DROP
-A INPUT -s 45.33.45.0/24 -j DROP
-A INPUT -s 45.33.44.0/24 -j DROP
-A INPUT -s 45.33.43.0/24 -j DROP
-A INPUT -s 45.33.42.0/24 -j DROP
-A INPUT -s 45.33.41.0/24 -j DROP
-A INPUT -s 45.33.40.0/24 -j DROP
-A INPUT -s 45.33.39.0/24 -j DROP
-A INPUT -s 45.33.38.0/24 -j DROP
-A INPUT -s 45.33.37.0/24 -j DROP
-A INPUT -s 45.33.36.0/24 -j DROP
-A INPUT -s 45.33.35.0/24 -j DROP
-A INPUT -s 45.33.34.0/24 -j DROP
-A INPUT -s 45.33.33.0/24 -j DROP
-A INPUT -s 45.33.32.0/24 -j DROP
-A INPUT -s 45.33.32.0/19 -j DROP
-A INPUT -s 45.33.0.0/19 -j DROP
-A INPUT -s 23.239.28.0/22 -j DROP
-A INPUT -s 23.239.24.0/22 -j DROP
-A INPUT -s 23.239.23.0/24 -j DROP
-A INPUT -s 23.239.22.0/24 -j DROP
-A INPUT -s 23.239.21.0/24 -j DROP
-A INPUT -s 23.239.20.0/24 -j DROP
-A INPUT -s 23.239.20.0/22 -j DROP
-A INPUT -s 23.239.16.0/22 -j DROP
-A INPUT -s 23.239.8.0/21 -j DROP
-A INPUT -s 23.239.7.0/24 -j DROP
-A INPUT -s 23.239.6.0/24 -j DROP
-A INPUT -s 23.239.5.0/24 -j DROP
-A INPUT -s 23.239.4.0/24 -j DROP
-A INPUT -s 23.239.3.0/24 -j DROP
-A INPUT -s 23.239.2.0/24 -j DROP
-A INPUT -s 23.239.1.0/24 -j DROP
-A INPUT -s 23.239.0.0/24 -j DROP
-A INPUT -s 23.239.0.0/21 -j DROP
-A INPUT -s 23.92.28.0/22 -j DROP
-A INPUT -s 23.92.27.0/24 -j DROP
-A INPUT -s 23.92.26.0/24 -j DROP
-A INPUT -s 23.92.25.0/24 -j DROP
-A INPUT -s 23.92.24.0/24 -j DROP
-A INPUT -s 23.92.24.0/22 -j DROP
-A INPUT -s 23.92.16.0/21 -j DROP
-A INPUT -s 122.226.180.0/23 -j DROP
-A INPUT -s 198.143.128.0/18 -j DROP
-A INPUT -s 197.48.128.0/18 -j DROP
-A INPUT -s 132.145.32.0/20 -j DROP
-A INPUT -s 180.151.48.0/24 -j DROP
-A INPUT -s 159.65.192.0/20 -j DROP
-A INPUT -s 207.246.96.0/20 -j DROP
-A INPUT -s 168.128.13.0/24 -j DROP
-A INPUT -s 41.226.128.0/19 -j DROP
-A INPUT -s 101.248.0.0/15 -j DROP
-A INPUT -s 137.226.0.0/16 -j DROP
-A INPUT -s 176.47.93.0/24 -j DROP
-A INPUT -s 46.252.27.0/24 -j DROP
-A INPUT -s 144.76.0.0/16 -j DROP
-A INPUT -s 46.17.46.0/23 -j DROP
-A INPUT -s 80.82.77.0/24 -j DROP
-A INPUT -s 144.76.0.0/16 -j DROP
-A INPUT -s 95.216.0.0/16 -j DROP
-A INPUT -s 95.0.128.0/17 -j DROP
-A INPUT -s 35.176.0.0/15 -j DROP
-A INPUT -s 45.77.84.0/22 -j DROP
-A INPUT -s 217.23.0.0/20 -j DROP
-A INPUT -s 61.184.0.0/16 -j DROP
-A INPUT -s 176.9.0.0/16 -j DROP
-A INPUT -s 52.90.0.0/15 -j DROP
-A INPUT -p tcp -m multiport --dports 80,443 -j f2b-nginx-limits
-A INPUT -p tcp -m multiport --dports 80,443 -j f2b-nginx-ban
-A INPUT -p tcp -m multiport --dports 22 -j f2b-ssh
-A INPUT -p tcp -m multiport --dports 22 -j f2b-sshd
-A INPUT -p tcp -m multiport --dports 21,20,990,989 -j fail2ban-pure-ftpd
-A INPUT -p tcp -m multiport --dports 80,443 -j fail2ban-nginx-http-auth
-A INPUT -p tcp -m multiport --dports 22 -j fail2ban-ssh-ddos
-A INPUT -p tcp -j fail2ban-pam-generic
-A INPUT -p tcp -m multiport --dports 22 -j fail2ban-dropbear
-A INPUT -p tcp -m multiport --dports 80,443 -j fail2ban-nginx-raw
-A INPUT -p tcp -m multiport --dports 80,443 -j fail2ban-nginx-ban
-A INPUT -p tcp -m multiport --dports 80,443 -j fail2ban-nginx-limits
-A INPUT -p tcp -m multiport --dports 22 -j fail2ban-ssh
-A INPUT -p tcp -m multiport --dports 21,20,990,989 -j fail2ban-pure-ftpd
-A INPUT -p tcp -m multiport --dports 80,443 -j fail2ban-nginx-http-auth
-A INPUT -p tcp -m multiport --dports 22 -j fail2ban-ssh-ddos
-A INPUT -p tcp -j fail2ban-pam-generic
-A INPUT -p tcp -m multiport --dports 22 -j fail2ban-dropbear
-A INPUT -p tcp -m multiport --dports 80,443 -j fail2ban-nginx-raw
-A INPUT -p tcp -m multiport --dports 80,443 -j fail2ban-nginx-ban
-A INPUT -p tcp -m multiport --dports 80,443 -j fail2ban-nginx-limits
-A INPUT -p tcp -m multiport --dports 22 -j fail2ban-ssh
-A INPUT -p tcp -m multiport --dports 21,20,990,989 -j fail2ban-pure-ftpd
-A INPUT -p tcp -m multiport --dports 80,443 -j fail2ban-nginx-http-auth
-A INPUT -p tcp -m multiport --dports 22 -j fail2ban-ssh-ddos
-A INPUT -p tcp -j fail2ban-pam-generic
-A INPUT -p tcp -m multiport --dports 22 -j fail2ban-dropbear
-A INPUT -p tcp -m multiport --dports 80,443 -j fail2ban-nginx-raw
-A INPUT -p tcp -m multiport --dports 80,443 -j fail2ban-nginx-ban
-A INPUT -p tcp -m multiport --dports 80,443 -j fail2ban-nginx-limits
-A INPUT -p tcp -m multiport --dports 22 -j fail2ban-ssh
-A INPUT -p tcp -m multiport --dports 21,20,990,989 -j fail2ban-pure-ftpd
-A INPUT -p tcp -m multiport --dports 80,443 -j fail2ban-nginx-http-auth
-A INPUT -p tcp -m multiport --dports 22 -j fail2ban-ssh-ddos
-A INPUT -p tcp -j fail2ban-pam-generic
-A INPUT -p tcp -m multiport --dports 22 -j fail2ban-dropbear
-A INPUT -p tcp -m multiport --dports 80,443 -j fail2ban-nginx-limits
-A INPUT -p tcp -m multiport --dports 22 -j fail2ban-ssh
-A INPUT -p tcp -m multiport --dports 21,20,990,989 -j fail2ban-pure-ftpd
-A INPUT -p tcp -m multiport --dports 80,443 -j fail2ban-nginx-http-auth
-A INPUT -p tcp -m multiport --dports 22 -j fail2ban-ssh-ddos
-A INPUT -p tcp -j fail2ban-pam-generic
-A INPUT -p tcp -m multiport --dports 22 -j fail2ban-dropbear
-A INPUT -p tcp -m multiport --dports 80,443 -j fail2ban-nginx-limits
-A INPUT -p tcp -m multiport --dports 22 -j fail2ban-ssh
-A INPUT -p tcp -m multiport --dports 80,443 -j fail2ban-nginx-limits
-A INPUT -p tcp -m multiport --dports 21,20,990,989 -j fail2ban-pure-ftpd
-A INPUT -p tcp -m multiport --dports 80,443 -j fail2ban-nginx-http-auth
-A INPUT -p tcp -m multiport --dports 22 -j fail2ban-ssh-ddos
-A INPUT -p tcp -j fail2ban-pam-generic
-A INPUT -p tcp -m multiport --dports 22 -j fail2ban-dropbear
-A INPUT -p tcp -m multiport --dports 22 -j fail2ban-ssh
-A INPUT -i lo -j ACCEPT
-A INPUT -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A INPUT -p tcp -m tcp --dport 22 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 21 -j ACCEPT
-A INPUT -p udp -m udp --dport 21 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 80 --tcp-flags FIN,SYN,RST,ACK SYN -m connlimit --connlimit-above 20 --connlimit-mask 32 --connlimit-saddr -j REJECT --reject-with tcp-reset
-A INPUT -p tcp -m tcp --dport 443 --tcp-flags FIN,SYN,RST,ACK SYN -m connlimit --connlimit-above 20 --connlimit-mask 32 --connlimit-saddr -j REJECT --reject-with tcp-reset
-A INPUT -p tcp -m tcp --dport 21 -m conntrack --ctstate NEW,ESTABLISHED -m comment --comment "Allow ftp connections on port 21" -j ACCEPT
-A INPUT -p tcp -m tcp --sport 1024:65535 --dport 1024:65535 -m conntrack --ctstate ESTABLISHED -m comment --comment "Allow passive inbound connections" -j ACCEPT
-A INPUT -p tcp -m tcp --sport 1024:65535 --dport 20:65535 -m conntrack --ctstate NEW,ESTABLISHED -j ACCEPT
-A OUTPUT -p tcp -m tcp --dport 21 -m conntrack --ctstate NEW,ESTABLISHED -m comment --comment "Allow ftp connections on port 21" -j ACCEPT
-A OUTPUT -p tcp -m tcp --sport 1024:65535 --dport 1024:65535 -m conntrack --ctstate RELATED,ESTABLISHED -m comment --comment "Allow passive inbound connections" -j ACCEPT
-A f2b-nginx-ban -s 159.65.193.69/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-nginx-ban -j RETURN
-A f2b-nginx-limits -j RETURN
-A f2b-ssh -s 185.53.169.49/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-ssh -s 91.121.76.122/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-ssh -s 61.184.247.8/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-ssh -s 61.184.247.11/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-ssh -s 50.47.109.245/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-ssh -s 47.22.135.70/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-ssh -s 180.151.48.148/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-ssh -s 132.145.40.120/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-ssh -s 122.226.181.167/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-ssh -j RETURN
-A f2b-sshd -s 132.232.103.159/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 223.111.139.211/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 36.156.24.99/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 202.69.73.114/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 180.64.71.114/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 2.244.68.231/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 115.238.245.2/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 213.120.170.34/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 61.184.247.6/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 185.53.169.49/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 223.111.139.244/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 61.184.247.8/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 50.47.109.245/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 47.22.135.70/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 180.151.48.148/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 132.145.40.120/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 122.226.181.167/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 106.251.78.51/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -j RETURN
-A fail2ban-dropbear -j RETURN
-A fail2ban-dropbear -j RETURN
-A fail2ban-dropbear -j RETURN
-A fail2ban-dropbear -j RETURN
-A fail2ban-dropbear -j RETURN
-A fail2ban-dropbear -j RETURN
-A fail2ban-nginx-ban -j RETURN
-A fail2ban-nginx-ban -j RETURN
-A fail2ban-nginx-ban -j RETURN
-A fail2ban-nginx-http-auth -j RETURN
-A fail2ban-nginx-http-auth -j RETURN
-A fail2ban-nginx-http-auth -j RETURN
-A fail2ban-nginx-http-auth -j RETURN
-A fail2ban-nginx-http-auth -j RETURN
-A fail2ban-nginx-http-auth -j RETURN
-A fail2ban-nginx-limits -s 139.162.151.10/32 -j DROP
-A fail2ban-nginx-limits -s 139.162.151.155/32 -j DROP
-A fail2ban-nginx-limits -s 139.162.187.138/32 -j DROP
-A fail2ban-nginx-limits -s 139.162.181.155/32 -j DROP
-A fail2ban-nginx-limits -s 139.162.144.202/32 -j DROP
-A fail2ban-nginx-limits -s 139.162.179.214/32 -j DROP
-A fail2ban-nginx-limits -j RETURN
-A fail2ban-nginx-limits -j RETURN
-A fail2ban-nginx-limits -j RETURN
-A fail2ban-nginx-limits -j RETURN
-A fail2ban-nginx-limits -j RETURN
-A fail2ban-nginx-limits -j RETURN
-A fail2ban-nginx-raw -s 139.162.180.37/32 -j DROP
-A fail2ban-nginx-raw -s 139.162.186.136/32 -j DROP
-A fail2ban-nginx-raw -s 139.162.187.138/32 -j DROP
-A fail2ban-nginx-raw -s 139.162.191.89/32 -j DROP
-A fail2ban-nginx-raw -j RETURN
-A fail2ban-nginx-raw -j RETURN
-A fail2ban-nginx-raw -j RETURN
-A fail2ban-pam-generic -j RETURN
-A fail2ban-pam-generic -j RETURN
-A fail2ban-pam-generic -j RETURN
-A fail2ban-pam-generic -j RETURN
-A fail2ban-pam-generic -j RETURN
-A fail2ban-pam-generic -j RETURN
-A fail2ban-pure-ftpd -j RETURN
-A fail2ban-pure-ftpd -j RETURN
-A fail2ban-pure-ftpd -j RETURN
-A fail2ban-pure-ftpd -j RETURN
-A fail2ban-pure-ftpd -j RETURN
-A fail2ban-pure-ftpd -j RETURN
-A fail2ban-ssh -j RETURN
-A fail2ban-ssh -j RETURN
-A fail2ban-ssh -j RETURN
-A fail2ban-ssh -j RETURN
-A fail2ban-ssh -j RETURN
-A fail2ban-ssh -j RETURN
-A fail2ban-ssh-ddos -j RETURN
-A fail2ban-ssh-ddos -j RETURN
-A fail2ban-ssh-ddos -j RETURN
-A fail2ban-ssh-ddos -j RETURN
-A fail2ban-ssh-ddos -j RETURN
-A fail2ban-ssh-ddos -j RETURN
COMMIT
# Completed on Sat Feb  9 14:24:11 2019
